[package]
name = "pynubls"
version = "0.1.0"
authors = ["NuCypher"]
edition = "2018"

[package.metadata.maturin]
requires-dist = ["py_ecc==5.0.0"]

[lib]
name = "pynubls"
crate-type = ["cdylib"]

[dependencies.nubls]
path = "../rust-nubls/"
version = "0.1.0"

[dependencies.bls12_381]
version = "0.3.1"
features = ["nightly", "endo"]

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]
