[package]
name = "rust-nubls"
version = "0.1.0"
authors = ["tuxxy <me@johnpacific.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bls12_381]
version = "0.1.1"
features = ["nightly", "endo"]

[dependencies.getrandom]
version = "0.1"
