[package]
name = "nubls"
description = """
A BLS (Boneh-Lynn-Shacham) signature implementation written in pure Rust that
offers support for threshold signatures with Shamir's Secret Sharing, and a 
Proxy Re-Signature (PRS) algorithm designed by NuCypher called Penumbral.
"""
version = "0.1.0"
authors = ["NuCypher"]
license = "AGPL-3.0"
documentation = "https://docs.rs/nubls"
repository = "https://github.com/nucypher/nubls/tree/master/rust-nubls"
readme = "README.md"
edition = "2018"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["ethereum", "crypto", "ecc", "pairings", "bls12-381"]

[dependencies.bls12_381]
version = "0.3.1"
features = ["nightly", "endo"]

[dependencies.getrandom]
version = "0.2"

[dependencies.sha2]
version = "0.9.2"
