[package]
name = "nubls-wrapper"
version = "0.1.0"
authors = ["tuxxy <me@johnpacific.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nubls_wrapper"
crate-type = ["cdylib"]

[dependencies.nubls]
path = "../../rust-nubls/"
version = "0.1.0"

[dependencies.bls12_381]
version = "0.1.1"
features = ["nightly", "endo"]

[dependencies.pyo3]
version = "0.10.0"
features = ["extension-module"]
